maximus-app/workloads/base/spring-be/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-be-vs
  namespace: riag-tech-team-ap-maximus-app
spec:
  gateways:
    - istio-system/ingress-https
  http:
    - match:
        - uri:
            prefix: /riag/tech/team-ap/maximus-app/spring-be/
      route:
        - destination:
            host: spring-be.riag-tech-team-ap-maximus-app.svc.cluster.local
            port:
              number: 80
